force-app/main/default/objects/Product2/fields/Current_Ampere__c.field-meta.xml
<CustomField>
    <fullName>Current_Ampere__c</fullName>
    <label>Current (Ampere)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>