force-app/main/default/objects/Product2/fields/Energy__c.field-meta.xml
<CustomField>
    <fullName>Energy__c</fullName>
    <label>Energy (kWh)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>