force-app/main/default/objects/Product2/fields/Voltage__c.field-meta.xml
<CustomField>
    <fullName>Voltage__c</fullName>
    <label>Voltage (Volt)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>