force-app/main/default/objects/Product2/recordTypes/Charging_Station.recordType-meta.xml
<RecordType>
    <fullName>Charging_Station</fullName>
    <active>true</active>
    <label>Charging Station</label>
</RecordType>